new: Add Tips and Tricks section to TEXT_CONTENT
Added a new section  to content for tips and tricks for best practices when working with images (and added placeholder section in index)

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@ Finding your way around
   5.e subsection 5 - ellipse
   5.f subsection 6 - polygon
   5.g subsection 7 - path
-6. Footer
-  6.a About
-  6.b Author
-  6.c Social media
+6. Section 3 - Best Practices
+7. Footer
+  7.a About
+  7.b Author
+  7.c Social media
 ------------------------->
   <body>
     <!--Container box-->
@@ -70,7 +71,8 @@ Finding your way around
         <!--Section 2 - Filters-->
         <section id="sec_filters"></section>
         <!--Section 3 - Clipping-->
-        <section id="sec_clipping"></section>      
+        <section id="sec_clipping"></section>
+        <section id="sec_tips"></section>      
       </main>
       <!--footer-->
       <footer>
