new: Add subsection containers to INDEX
Added structure of subsections within the main sections with placeholders for headings, text content, code examples and image examples

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Finding your way around
   5.e subsection 5 - ellipse
   5.f subsection 6 - polygon
   5.g subsection 7 - path
-6. Section 3 - Best Practices
+6. Section 4 - Best Practices
 7. Footer
   7.a About
   7.b Author
@@ -60,19 +60,49 @@ Finding your way around
       <!--nav menu-->
       <nav>
         <ul>
-          <li><a href="#sec_filters">Filters</a></li>
-          <li><a href="#sec_clipping">Clipping</a></li>
+          <li><a href="#sect_filters">Filters</a></li>
+          <li><a href="#sect_clipping">Clipping</a></li>
+          <li><a href="#sect_tips">Tips</a></li>
         </ul>
       </nav>
       <!--main content for page-->
       <main>
         <!--Section 1 - Intro-->
-        <section id="sec_intro"></section>
+        <section id="sect_intro">
+          <header class="sect_header">
+            <h2>The road so far...</h2>
+          </header>
+          <div class="text_box"></div>
+        </section>
         <!--Section 2 - Filters-->
-        <section id="sec_filters"></section>
+        <section id="sect_filters">
+          <header class="sect_header">
+            <h2>Filters...</h2>
+          </header>
+          <div class="text_box">
+
+          </div>
+          <figure id="control_img"></figure>
+          <div class="subsection_box">
+            <div class="subsection text_box"></div>
+            <div class="code_box"></div>
+            <figure id="example_img"></figure>
+          </div>
+        </section>
         <!--Section 3 - Clipping-->
-        <section id="sec_clipping"></section>
-        <section id="sec_tips"></section>      
+        <section id="sect_clipping">
+          <header class="sect_header">
+            <h2>Clipping...</h2>
+          </header>
+          <div class="text_box"></div>
+        </section>
+        <!--Section 4 - Best Practices-->
+        <section id="sect_tips">
+          <header class="sect_header">
+            <h2>Tips and Tricks...</h2>
+          </header>
+          <div class="text_box"></div>
+        </section>      
       </main>
       <!--footer-->
       <footer>
