new: Add submenu to Filter section on INDEX
Added submenu for each filter value subsection

--- a/index.html
+++ b/index.html
@@ -79,14 +79,35 @@ Finding your way around
           <header class="sect_header">
             <h2>Filters...</h2>
           </header>
-          <div class="text_box">
-
-          </div>
-          <figure id="control_img"></figure>
-          <div class="subsection_box">
-            <div class="subsection text_box"></div>
+          <!--Section 2 - Filters - Subsection 1 - intro-->
+          <div id="sect_filters_intro" class="subsection_box">
             <div class="code_box"></div>
-            <figure id="example_img"></figure>
+            <ul class="sub_nav">
+              <li><a href="#sect_filters_url">url</a></li>
+              <li><a href="#">blur</a></li>
+              <li><a href="#">brightness</a></li>
+              <li><a href="#">contrast</a></li>
+              <li><a href="#">drop-shadow</a></li>
+              <li><a href="#">grayscale</a></li>
+              <li><a href="#">hue-rotate</a></li>
+              <li><a href="#">invert</a></li>
+              <li><a href="#">saturate</a></li>
+              <li><a href="#">opacity</a></li>
+              <li><a href="#">sepia</a></li>
+            </ul>
+          </div>
+          <!--Section 2 - Filters - Subsection 2 - url-->
+          <div id="sect_filters_url" class="subsection_box">
+            <div class="text_box">
+              <h3>url</h3>
+              <p>...</p>
+            </div>
+            <div class="code_box">
+              <code>
+                
+              </code>
+            </div>
+            <figure id="control_img"></figure>
           </div>
         </section>
         <!--Section 3 - Clipping-->
