new: Add intro content on INDEX Added intro with description of the page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ Finding your way around
 7. Footer
   7.a About
   7.b Author
-  7.c Social media
 ------------------------->
   <body>
     <!--Container box-->
@@ -73,7 +72,9 @@ Finding your way around
             <h2>The road so far...</h2>
           </header>
           <div class="text_box">
-            <p>...</p>
+            <p>Continuing with my self taught frontend development coding journey I have created a series of CSS Cheat sheets. I have gone from how to select an element and position it, to how to style text based content and now I am moving on to the more visual styling components like images.</p>
+            <p>Everything covered so far has looked at using images for backgrounds or bullet points so this cheat sheet is covering how to manipulate images when used as multimedia elements.</p>
+            <p>The focus is using filters to apply graphical effects (which can also be used on backgrounds and borders), or by clipping the image.</p>
           </div>
         </section>
         <!--Section 2 - Filters-->
@@ -85,7 +86,9 @@ Finding your way around
           <div id="sect_filters_intro" class="subsection_box">
             <div class="text_box">
               <div class="code_box">
-                <code></code>
+                <code>
+                  filter:function(value);
+                </code>
               </div>
               <ul class="sub_nav">
                 <li><a href="#sect_filters_url">url</a></li>
@@ -302,6 +305,9 @@ Finding your way around
             <h2>Tips and Tricks...</h2>
           </header>
           <div class="text_box"></div>
+          <div class="code_box">
+            <code></code>
+          </div>
         </section>      
       </main>
       <!--footer-->
