update: Add subsection skeleton to Clip Section on INDEX
Added placeholder divs for each subsection in Section 2 - Clipping to link to mini section menu

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ Finding your way around
             <div class="text_box">
               <div class="sub_header">
                 <h3>sepia()</h3>
-                <p>...converts image to sepia colouration (0% is unchanged and goes to100% )</p>
+                <p>...converts image to sepia colouration (0% is unchanged and goes to 100% )</p>
               </div><!--end of subsection header-->
               <div class="code_box">
                <code>img {<br>
@@ -365,8 +365,13 @@ Finding your way around
           <!--Section 3 - Clipping - Subsection 1 - intro-->
           <div id="sect_clip_intro" class="subsection_box">
             <div class="text_box">
+              <p>The property creates a clipping region that sets what part of an element should be shown (parts that are inside the region are shown, while those outside are hidden)</p>
               <div class="code_box">
-                <code></code>
+                <code>
+                  img {<br>
+                    clip-path: padding-box;<br>
+                    }
+                </code>
               </div><!--end of code_box-->
               <ul class="sub_nav">
               <li><a href="#">inset</a></li>
@@ -378,6 +383,18 @@ Finding your way around
             </ul>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
+        <!--Section 3 - Clipping - Subsection 2 - inset-->
+        <div id="sect_clip_inset" class="subsection_box"></div><!--end of subsection-->
+        <!--Section 3 - Clipping - Subsection 3 - circle-->
+        <div id="sect_clip_circle" class="subsection_box"></div><!--end of subsection-->
+        <!--Section 3 - Clipping - Subsection 4 - ellipse-->
+        <div id="sect_clip_ellipse" class="subsection_box"></div><!--end of subsection-->
+        <!--Section 3 - Clipping - Subsection 5 - polygon-->
+        <div id="sect_clip_polygon" class="subsection_box"></div><!--end of subsection-->
+        path        <div id="sect_clip_path" class="subsection_box"></div><!--end of subsection-->
+        <!--Section 3 - Clipping - Subsection 6 - path-->
+        <div id="sect_clip_path" class="subsection_box"></div><!--end of subsection-->
+        path        <div id="sect_clip_path" class="subsection_box"></div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 7 - clip boxes-->
         <div id="sect_clip_box" class="subsection_box">
           <div class="text_box">
