update: Add subsection headers and code box to Clipping section on INDEX
Added to Clipping subsection skeleton a header and placeholder code box for each of the subsections

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Finding your way around
               <div class="code_box">
                 <code>
                   img {<br>
-                    clip-path: padding-box;<br>
+                    clip-path: function(value);<br>
                     }
                 </code>
               </div><!--end of code_box-->
@@ -384,23 +384,86 @@ Finding your way around
           </div><!--end of text_box-->
         </div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 2 - inset-->
-        <div id="sect_clip_inset" class="subsection_box"></div><!--end of subsection-->
+        <div id="sect_clip_inset" class="subsection_box">
+          <div class="text_box">
+            <div class="sub_header">
+              <h3>inset()</h3>
+            </div><!--end of subsection header-->
+            <div class="code_box">
+             <code>img {<br>
+              <br>
+              }
+             </code>
+            </div><!--end of code_box-->
+          </div><!--end of text_box-->
+        </div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 3 - circle-->
-        <div id="sect_clip_circle" class="subsection_box"></div><!--end of subsection-->
+        <div id="sect_clip_circle" class="subsection_box">
+          <div class="text_box">
+            <div class="sub_header">
+              <h3>circle()</h3>
+            </div><!--end of subsection header-->
+            <div class="code_box">
+             <code>img {<br>
+              <br>
+              }
+             </code>
+            </div><!--end of code_box-->
+          </div><!--end of text_box-->
+        </div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 4 - ellipse-->
-        <div id="sect_clip_ellipse" class="subsection_box"></div><!--end of subsection-->
+        <div id="sect_clip_ellipse" class="subsection_box">
+          <div class="text_box">
+            <div class="sub_header">
+              <h3>ellipse()</h3>
+            </div><!--end of subsection header-->
+            <div class="code_box">
+             <code>img {<br>
+              <br>
+              }
+             </code>
+            </div><!--end of code_box-->
+          </div><!--end of text_box-->
+        </div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 5 - polygon-->
-        <div id="sect_clip_polygon" class="subsection_box"></div><!--end of subsection-->
-        path        <div id="sect_clip_path" class="subsection_box"></div><!--end of subsection-->
-        <!--Section 3 - Clipping - Subsection 6 - path-->
-        <div id="sect_clip_path" class="subsection_box"></div><!--end of subsection-->
-        path        <div id="sect_clip_path" class="subsection_box"></div><!--end of subsection-->
+        <div id="sect_clip_polygon" class="subsection_box">
+          <div class="text_box">
+            <div class="sub_header">
+              <h3>polygon()</h3>
+            </div><!--end of subsection header-->
+            <div class="code_box">
+             <code>img {<br>
+              <br>
+              }
+             </code>
+            </div><!--end of code_box-->
+          </div><!--end of text_box-->
+        </div><!--end of subsection-->
+        <div id="sect_clip_path" class="subsection_box">
+          <div class="text_box">
+            <div class="sub_header">
+              <h3>path()</h3>
+            </div><!--end of subsection header-->
+            <div class="code_box">
+             <code>img {<br>
+              <br>
+              }
+             </code>
+            </div><!--end of code_box-->
+          </div><!--end of text_box-->
+        </div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 7 - clip boxes-->
         <div id="sect_clip_box" class="subsection_box">
           <div class="text_box">
             <div class="sub_header">
               <h3>Boxes...</h3>
-               <p>...</p>
+              <div class="code_box">
+                <code>
+                  img {<br>
+                    clip-path: padding-box;<br>
+                    }
+                </code>
+              </div><!--end of code_box-->
             </div><!--end of subsection header-->
             <!--containers for image example with clipping applied-->
           <figure id="margin_img">
