modified:   index.html
update: Add figure placeholders in Clip subsections in INDEX

Added figure and caption placeholders to be used for each image example
in every clip subsection

--- a/index.html
+++ b/index.html
@@ -374,12 +374,12 @@ Finding your way around
                 </code>
               </div><!--end of code_box-->
               <ul class="sub_nav">
-              <li><a href="#">inset</a></li>
-              <li><a href="#">circle</a></li>
-              <li><a href="#">ellipse</a></li>
-              <li><a href="#">polygon</a></li>
-              <li><a href="#">path</a></li>  
-              <li><a href="#">and by &quot;boxes&quot;...</a></li>          
+              <li><a href="#sect_clip_inset">inset</a></li>
+              <li><a href="#sect_clip_circle">circle</a></li>
+              <li><a href="#sect_clip_ellipse">ellipse</a></li>
+              <li><a href="#sect_clip_polygon">polygon</a></li>
+              <li><a href="#sect_clip_path">path</a></li>  
+              <li><a href="#sect_clip_box">and by &quot;boxes&quot;...</a></li>          
             </ul>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
@@ -395,6 +395,10 @@ Finding your way around
               }
              </code>
             </div><!--end of code_box-->
+            <!--example of inset clip on example image-->
+            <figure id="inset_img">
+              <figcaption></figcaption>
+            </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 3 - circle-->
@@ -409,6 +413,10 @@ Finding your way around
               }
              </code>
             </div><!--end of code_box-->
+            <!--example of circle clip on example image-->
+            <figure id="circle_img">
+              <figcaption></figcaption>
+            </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 4 - ellipse-->
@@ -423,6 +431,10 @@ Finding your way around
               }
              </code>
             </div><!--end of code_box-->
+            <!--example of ellipse clip on example image-->
+            <figure id="ellipse_img">
+              <figcaption></figcaption>
+            </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 5 - polygon-->
@@ -437,6 +449,10 @@ Finding your way around
               }
              </code>
             </div><!--end of code_box-->
+            <!--example of polygon clip on example image-->
+            <figure id="polygon_img">
+              <figcaption></figcaption>
+            </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
         <div id="sect_clip_path" class="subsection_box">
@@ -450,6 +466,10 @@ Finding your way around
               }
              </code>
             </div><!--end of code_box-->
+            <!--example of path clip on example image-->
+            <figure id="path_img">
+              <figcaption></figcaption>
+            </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 7 - clip boxes-->
