update: Add example images to Clip subsections

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ Finding your way around
             <figure id="shadow_img">
               <figcaption></figcaption>
               <!--example of drop-shadow filter on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with drop-shadow filter applied" width="250px">
             </figure>
           </div><!--end of subsection-->
           <!--Section 2 - Filters - Subsection 7 - grayscale-->
@@ -251,6 +252,7 @@ Finding your way around
             <figure id="grayscale_img">
               <figcaption></figcaption>
               <!--example of grayscale filter on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with grayscale filter applied" width="250px">
             </figure>
           </div> <!--end of subsection-->
           <!--Section 2 - Filters - Subsection 8 - hue-rotate-->
@@ -272,6 +274,7 @@ Finding your way around
             <figure id="hue_img">
               <figcaption></figcaption>
               <!--example of hue filter on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with hue-rotate filter applied" width="250px">
             </figure>
           </div><!--end of subsection-->
           <!--Section 2 - Filters - Subsection 9 - invert-->
@@ -293,6 +296,7 @@ Finding your way around
             <figure id="invert_img">
               <figcaption></figcaption>
               <!--example of invert filter on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with invert filter applied" width="250px">
             </figure>
           </div><!--end of subsection-->
           <!--Section 2 - Filters - Subsection 10 - saturate-->
@@ -313,6 +317,7 @@ Finding your way around
             <figure id="saturate_img">
               <figcaption></figcaption>
               <!--example of saturate filter on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with saturate filter applied" width="250px">
             </figure>
           </div><!--end of subsection-->
           <!--Section 2 - Filters - Subsection 11 - opacity-->
@@ -334,6 +339,7 @@ Finding your way around
             <figure id="opacity_img">
               <figcaption></figcaption>
               <!--example of opacity filter on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with opacity filter applied" width="250px">
             </figure>
           </div><!--end of subsection-->
           <!--Section 2 - Filters - Subsection 12 - sepia-->
@@ -354,6 +360,7 @@ Finding your way around
             <figure id="sepia_img">
               <figcaption></figcaption>
               <!--example of sepia filter on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with sepia filter applied" width="250px">
             </figure>
           </div><!--end of subsection-->
         </section>
@@ -395,9 +402,11 @@ Finding your way around
               }
              </code>
             </div><!--end of code_box-->
-            <!--example of inset clip on example image-->
+            <!--container for image example with applied filter-->
             <figure id="inset_img">
               <figcaption></figcaption>
+              <!--example of inset clip on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with inset clipping" width="250px">
             </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
@@ -413,9 +422,11 @@ Finding your way around
               }
              </code>
             </div><!--end of code_box-->
-            <!--example of circle clip on example image-->
+            <!--container for image example with applied filter-->
             <figure id="circle_img">
               <figcaption></figcaption>
+              <!--example of circle clip on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with circle clipping" width="250px">
             </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
@@ -431,9 +442,11 @@ Finding your way around
               }
              </code>
             </div><!--end of code_box-->
-            <!--example of ellipse clip on example image-->
+            <!--container for image example with applied filter-->
             <figure id="ellipse_img">
               <figcaption></figcaption>
+              <!--example of ellipse clip on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with ellipse clipping" width="250px">
             </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
@@ -450,9 +463,11 @@ Finding your way around
              </code>
              <p>Use this <a href="https://bennettfeely.com/clippy/">clippy</a>tool</p>
             </div><!--end of code_box-->
-            <!--example of polygon clip on example image-->
+            <!--container for image example with applied filter-->
             <figure id="polygon_img">
               <figcaption></figcaption>
+              <!--example of polygon clip on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with polygon clipping" width="250px">
             </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
@@ -467,9 +482,11 @@ Finding your way around
               }
              </code>
             </div><!--end of code_box-->
-            <!--example of path clip on example image-->
+            <!--container for image example with applied filter-->            
             <figure id="path_img">
               <figcaption></figcaption>
+              <!--example of path clip on example image-->
+              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with path clipping" width="250px">
             </figure>
           </div><!--end of text_box-->
         </div><!--end of subsection-->
