update: Figcaptions set on clip examples in INDEX
Added figcaption to each figure in Clip subsections to show an image example of each clip filter

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ Finding your way around
       <!--nav menu-->
       <nav>
         <ul>
-          <li><a href="#sect_filters">Filters</a></li>
-          <li><a href="#sect_clipping">Clipping</a></li>
+          <li><a href="#sect_filters">Filter</a></li>
+          <li><a href="#sect_clipping">Clip</a></li>
           <li><a href="#sect_tips">Tips</a></li>
         </ul>
       </nav>
@@ -404,7 +404,7 @@ Finding your way around
             </div><!--end of code_box-->
             <!--container for image example with applied filter-->
             <figure id="inset_img">
-              <figcaption></figcaption>
+              <figcaption>Inset clip</figcaption>
               <!--example of inset clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with inset clipping" width="250px">
             </figure>
@@ -424,7 +424,7 @@ Finding your way around
             </div><!--end of code_box-->
             <!--container for image example with applied filter-->
             <figure id="circle_img">
-              <figcaption></figcaption>
+              <figcaption>Circle clip</figcaption>
               <!--example of circle clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with circle clipping" width="250px">
             </figure>
@@ -444,7 +444,7 @@ Finding your way around
             </div><!--end of code_box-->
             <!--container for image example with applied filter-->
             <figure id="ellipse_img">
-              <figcaption></figcaption>
+              <figcaption>Ellipse clip</figcaption>
               <!--example of ellipse clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with ellipse clipping" width="250px">
             </figure>
@@ -465,7 +465,7 @@ Finding your way around
             </div><!--end of code_box-->
             <!--container for image example with applied filter-->
             <figure id="polygon_img">
-              <figcaption></figcaption>
+              <figcaption>Polygon clip</figcaption>
               <!--example of polygon clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with polygon clipping" width="250px">
             </figure>
@@ -484,7 +484,7 @@ Finding your way around
             </div><!--end of code_box-->
             <!--container for image example with applied filter-->            
             <figure id="path_img">
-              <figcaption></figcaption>
+              <figcaption>Path clip</figcaption>
               <!--example of path clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with path clipping" width="250px">
             </figure>
@@ -505,25 +505,39 @@ Finding your way around
             </div><!--end of subsection header-->
             <!--containers for image example with clipping applied-->
           <figure id="margin_img">
-            <figcaption>...</figcaption>
+            <figcaption>Clipped to margin box</figcaption>
+            <!--example of margin box clip on image-->
+            <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with margin box clipping" width="250px">
           </figure>
           <figure id="border_img">
-            <figcaption>...</figcaption>
+            <figcaption>Clipped to border box</figcaption>
+            <!--example of border box clip on image-->
+            <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with border box clipping" width="250px">
           </figure>
           <figure id="padding_img">
-            <figcaption>...</figcaption>
+            <figcaption>Clipped to padding box</figcaption>
+            <!--example of padding box clip on image-->
+            <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with padding box clipping" width="250px">
           </figure>
           <figure id="content_img">
-            <figcaption>...</figcaption>
+            <figcaption>Clipped to content box</figcaption>
+            <!--example of content box clip on image-->
+            <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with content box clipping" width="250px">
           </figure>
           <figure id="fill_img">
-            <figcaption>...</figcaption>
+            <figcaption>Clipped to fill box</figcaption>
+            <!--example of fill box clip on image-->
+            <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with fill box clipping" width="250px">
           </figure>
           <figure id="stroke_img">
-            <figcaption>...</figcaption>
+            <figcaption>Clipped to stroke box</figcaption>
+            <!--example of stroke box clip on image-->
+            <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with stroke box clipping" width="250px">
           </figure>
           <figure id="view_img">
-            <figcaption>...</figcaption>
+            <figcaption>Clipped to view box</figcaption>
+            <!--example of view box clip on image-->
+            <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with view box clipping" width="250px">
           </figure>
           <div class="text_box">
             <p>There are combos too such as...</p>
